2002-04-09  Jonathan Larmour  <jlarmour@redhat.com>

	* include/stdlib.h: use NORET attributes from cyg_type.h.

2002-03-20  Jonathan Larmour  <jlarmour@redhat.com>

	* include/float.h: Don't have multiple inclusion protection. It is
	unnecessary and can confuse things if the headers are subject to two
	-I paths.
	* include/stdarg.h: Ditto.
	* include/float.h: Don't cover include_next with inclusion protection
	for a similar reason.
	* include/stddef.h: Use C comment.

2002-01-17  Jonathan Larmour  <jlarmour@redhat.com>

	* include/unistd.h: ftruncate() should use an off_t argument.

2002-01-15  Jonathan Larmour  <jlarmour@redhat.com>

	* include/sys/types.h: off_t should be signed.

2001-12-05  Jonathan Larmour  <jlarmour@redhat.com>

	* include/netdb.h (gethostbyname): anonymous arguments aren't allowed
	in C (I thought they were a GNU C extension, sigh).

2001-11-30  Jonathan Larmour  <jlarmour@redhat.com>
2001-11-30  Andrew Lunn  <andrew.lunn@ascom.ch>

	* include/netdb.h: Provide a default NULL implementation of
	struct hostent, gethostbyname and gethostbyaddr if a real implementation
	doesn't exist. This makes life easier for legacy code.

2001-10-17  Jesper Skov  <jskov@redhat.com>

	* cdl/isoinfra.cdl: Changed string interfaces to flavor booldata.

	* include/string.h: Changed feature checks to ifdef.

2001-10-09  Jonathan Larmour  <jlarmour@redhat.com>

	* cdl/isoinfra.cdl: Make all CYGPKG_ISO_TIME interfaces be booldata.
	Add config for POSIX clock types and implementations.
	Make all CYGPKG_ISO_PTHREAD interfaces be booldata.
	Add POSIX sleep() config.

	* include/pthread.h: Reflect booldata interfaces.
	* include/time.h: Ditto.
	Also add default struct itimerspec and POSIX clock includes.
	* include/unistd.h: Add sleep includes, with default proto.

2001-09-28  Jonathan Larmour  <jlarmour@redhat.com>

	* cdl/isoinfra.cdl: Add netdb services and proto function support.
	* include/netdb.h: New file.

2001-09-24  Jesper Skov  <jskov@redhat.com>
